Update ds_tweet_sentiment(using twitter API V2).ipynb
Get the access tokens and consumer keys from
developer.twitter.com

--- a/ds_tweet_sentiment(using twitter API V2).ipynb
+++ b/ds_tweet_sentiment(using twitter API V2).ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'OFACZ2UZYV6bRaH7Yw4NMXyDF'\n",
-    "consumer_secret = 'Uz21V7UgiIW6VvkkWgAaPYDwDOFXke47zQx35XKpTl7jkuSFn2'"
+    "consumer_key = 'consumer code'\n",
+    "consumer_secret = 'consumer secret code'"
    ]
   },
   {
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "access_token = '1278716864944717825-7XsmBjXnDPWSg7ZPRrV3HaVtXtwRM4'\n",
-    "access_token_secret = 'i0kIXZMMv61NecS90XwDwYXN0SvJTYgtlVxEBsBHjDXqQ'"
+    "access_token = 'access token'\n",
+    "access_token_secret = 'access token secret'"
    ]
   },
   {
